fix(map): hide scrollbar in location shows carousel
This patch hides the scrollbar in the location shows carousel. Users can
still swipe to scroll (e.g. on mobile or on a magic trackpad) but are
encouraged to use the pagination buttons instead. This also ensures that
the styling looks good across platforms (e.g. windows always shows an
ugly scrollbar).

--- a/app/app.css
+++ b/app/app.css
@@ -39,6 +39,15 @@
   .prose :where(blockquote p:first-of-type):not(:where([class~="not-prose"] *))::before {
     @apply content-none;
   }
+
+  /* remove scrollbars for carousels */
+  .scrollbar-hide::-webkit-scrollbar {
+    display: none;
+  }
+  .scrollbar-hide {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+  }
 }
 
 /* FIXME instead of defining this as a reusable TailwindCSS class, this should
